<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/bottom"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/icon_aplikasi" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_login"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/etName"
            style="@style/et_login"
            android:paddingHorizontal="8dp"
            android:inputType="text"
            android:hint="@string/hint_name"/>

        <EditText
            android:id="@+id/etPass"
            style="@style/et_login"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:hint="@string/hint_pass"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/login"/>
    </LinearLayout>


</ScrollView>