<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.comment.CommentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/et_name_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_filled_input_comment"
            android:padding="10dp"
            android:textColorHint="@color/gray"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:hint="@string/please_fill_your_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"
            android:text="@string/comment"/>

        <EditText
            android:id="@+id/et_body_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:background="@drawable/rounded_filled_input_comment"
            android:padding="10dp"
            android:textColor="@color/white"
            android:gravity="top"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/transparent"
            android:textAllCaps="false"
            android:text="@string/submit"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/red"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            android:text="@string/delete"/>
    </LinearLayout>


</ScrollView>