<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom"
    android:orientation="vertical"
    tools:context=".ui.people.PeopleDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@color/semi_transparent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp"
            tools:src="@drawable/dummy"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:layout_weight="2">
            <TextView
                android:id="@+id/tvName"
                style="@style/tv_people_head"
                tools:text="Tom Hooland"/>
            <TextView
                android:id="@+id/tvAct"
                style="@style/tv_people_detail"
                tools:text="Male, Actor"/>
            <TextView
                android:id="@+id/tvBirthday"
                style="@style/tv_people_detail"
                tools:text="1996-07-07 (25 years old)"/>
            <TextView
                android:id="@+id/tvLoc"
                style="@style/tv_people_detail"
                tools:text="Surrey, England, UK"/>
            <TextView
                android:id="@+id/tvKnownAs"
                style="@style/tv_people_detail"
                android:maxLines="4"
                tools:text="Tom holland, tom beland, belasdasd asda, lorem ipsum"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biography"
        android:padding="12dp"
        style="@style/tv_people_head"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/semi_transparent"
        android:padding="12dp"
        android:textColor="@color/white"
        android:text="@string/lorem_ipsum_dolor_sit_amet"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/known_for"
        android:padding="12dp"
        style="@style/tv_people_head"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvKnownFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/list_row_people_item"
        android:background="@color/semi_transparent"
        android:padding="12dp"
        android:textColor="@color/white"
        android:text="@string/lorem_ipsum_dolor_sit_amet"/>

</LinearLayout>